convertedToMDAPI/objects/PlantMaterial__c.object
<CustomObject>
    <label>Plant Material</label>
    <nameField>
        <displayFormat>PM-{00000}</displayFormat>
        <label>PM Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Plant Materials</relationshipLabel>
        <relationshipName>PlantMaterials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Offset__c</fullName>
        <label>Offset</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>PlantMaterials</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProcessingDuration__c</fullName>
        <label>Processing Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tolerance__c</fullName>
        <label>Tolerance %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>